# lucien

./: Cargo.toml  LICENSE  README.md  dhat-heap.json
assets/: preferences.toml
logs/: launcher.log.2026-01-08
src/: app.rs  launcher.rs  main.rs  preferences.rs  prompt.rs  theme.rs
src/preferences/: keybindings.rs  mod.rs  theme.rs
src/providers/: app.rs  clipboard.rs  file.rs  mod.rs
src/ui/: entry.rs  icon.rs  mod.rs  prompt.rs
