[package]
name = "lucien"
version = "0.1.0"
edition = "2024"

# [profile.release]
# debug = true

[dependencies]
iced = {version = "0.13.1", features = ["image", "svg", "tokio", "advanced", "lazy"]}
gio = "0.21.5"
iced_layershell = "0.13.7"
xdg = "3.0.0"
fuzzy-matcher = "0.3.7"
resvg = "0.45.1"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
tracing-appender = "0.2.4"
nix = {version = "0.30.1", features = ["process", "socket"]}
serde = "1.0.228"
toml = "0.9.11"
toml_edit = "0.24.0"
tokio = {version = "1.49.0", features = ["fs", "rt", "macros", "rt-multi-thread"]}
dhat = "0.3.3"

[features]
dhat-heap = []
